Added first ManagedBean as Example. Started model implementation.

--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -56,12 +56,12 @@
                                     <!-- bars -->
                                     <!-- 250px = 100% -->
                                     <ul>
-                                        <li id="income_bar" class="bar nr_1 green" style="height: 250px;">
+                                        <li id="income_bar" class="bar nr_1 green" style="height: #{master.heightIncome}px;">
                                             <div class="top"></div>
                                             <div class="bottom"></div>
                                             <span>2000€</span>
                                         </li>
-                                        <li id="outcome_bar" class="bar nr_2 red" style="height: 125px;">
+                                        <li id="outcome_bar" class="bar nr_2 red" style="height: #{master.heightOutcome}px;">
                                             <div class="top"></div>
                                             <div class="bottom"></div>
                                             <span>1000€</span>
