--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -123,6 +123,10 @@
 	<div id="footer">
             <p>Version: 0.1</p>
 	</div>
+        
+        <!-- 
+        ===== MODALS ====
+        -->
 	
 	<div id="addingModal" class="modal fade" role="dialog">
             <div class="modal-dialog">
@@ -157,11 +161,10 @@
                                                     <p>Kategorie:</p>
                                                 </td>
                                                 <td>
-                                                    <select>
-                                                        <option value="Gehalt">Gehalt</option>
-                                                        <option value="Bafoeg">Bafoeg</option>
-                                                        <option value="Taschengeld">Taschengeld</option>                                                
-                                                    </select>
+                                                    <h:selectOneMenu>
+                                                        <f:selectItems value="#{master.categoriesIncome}" var="c"
+                                                                       itemLabel="#{c.name}" itemValue="#{c.name}" />
+                                                    </h:selectOneMenu>
                                                     <button type="button" data-toggle="modal" data-target="#addingKategorieEinnahme">Hinzufügen</button>
                                                 </td>                                     
                                             </tr>
@@ -206,11 +209,10 @@
                                                     <p>Kategorie:</p>
                                                 </td>
                                                 <td>
-                                                    <select>
-                                                        <option value="Gehalt">Lebensmittel</option>
-                                                        <option value="Bafoeg">Kino</option>
-                                                        <option value="Taschengeld">Auto</option>                                                
-                                                    </select>
+                                                    <h:selectOneMenu>
+                                                        <f:selectItems value="#{master.categoriesOutcome}" var="c"
+                                                                       itemLabel="#{c.name}" itemValue="#{c.name}" />
+                                                    </h:selectOneMenu>
                                                     <button type="button" data-toggle="modal" data-target="#addingKategorieAusgabe">Hinzufügen</button>
                                                 </td>                                     
                                             </tr>
