Added Facelet for list categories.

--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -21,7 +21,7 @@
     <h:body>
         <div id="nav">
             <img src="img/logo.png" />
-            <a href="" class="section1">Dashboard</a>
+            <a href="index.xhtml" class="section1">Dashboard</a>
             <a class="section1" data-toggle="collapse" data-target="#adding_collapse">Erfassung</a>		
             <div id="adding_collapse" class="collapse">
                 <a href="" class="section2">Einnahme</a>
@@ -29,7 +29,7 @@
             </div> 
             <a class="section1" data-toggle="collapse" data-target="#overview_collapse">Übersicht</a>
             <div id="overview_collapse" class="collapse">
-                <a href="" class="section2">Listen</a>
+                <a href="list.xhtml" class="section2">Listen</a>
                 <a href="" class="section2">Verlauf</a>
             </div> 
             <a href="" class="section1">Einstellungen</a>
