--- a/web/list.xhtml
+++ b/web/list.xhtml
@@ -17,12 +17,7 @@
         <link rel="stylesheet" href="css/bootstrap.min.css" />
 	<script src="js/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script> 
-        
-        <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-        <script type="text/javascript">
-            google.charts.load('current', {'packages':['corechart']});
-            google.charts.setOnLoadCallback(drawChart);
-        </script>
+        <script src="js/Chart.js"></script> 
     </h:head>
     <h:body>
         <div id="header">
