--- a/web/list.xhtml
+++ b/web/list.xhtml
@@ -18,6 +18,12 @@
 	<script src="js/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script> 
         <script src="js/Chart.js"></script> 
+        
+        <script>
+            $(document).ready(function() {
+                drawPieIn();
+            });
+        </script>
     </h:head>
     <h:body>
         <div id="header">
@@ -54,7 +60,9 @@
                             <option>Jahr</option>
                         </select>
                     </div>
-                    <div id="piechartIncome" style="width: 50%; height: 500px; margin: auto;"></div>
+                    <div id="piechartIncomeWrapper">
+                        <canvas id="piechartIncome"></canvas>
+                    </div>
                     <div id="list">
                         <h:dataTable value="#{master.listLastTen}" var="pay" 
                                     styleClass="table-hover table">
@@ -97,7 +105,9 @@
                             <option>Jahr</option>
                         </select>
                     </div>
-                    <div id="piechartOutcome" style="width: 50%; height: 500px; margin: auto;"></div>
+                    <div id="piechartOutcomeWrapper" style="width: 50%; height: 500px; margin: auto;">
+                        <canvas id="piechartOutcome" width="100%" height="100%"></canvas>                        
+                    </div>
                     <div id="list">
                         <h:dataTable value="#{master.listLastTen}" var="pay" 
                                     styleClass="table-hover table">
