Added facelet for trend.

--- a/web/list.xhtml
+++ b/web/list.xhtml
@@ -41,7 +41,7 @@
             <a class="section1" data-toggle="collapse" data-target="#overview_collapse">Übersicht</a>
             <div id="overview_collapse" class="collapse">
                 <a href="list.xhtml" class="section2">Listen</a>
-                <a href="" class="section2">Verlauf</a>
+                <a href="trend.xhtml" class="section2">Verlauf</a>
             </div> 
             <a href="" class="section1">Einstellungen</a>
 	</div>
