Fixed bug that nav in desktop view was not extensible.

--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -23,13 +23,13 @@
     <h:body>
         <div class="topnav" id="myTopnav">
             <a href="" class="active">Dashboard</a>
-            <a class="section1" data-toggle="collapse" data-target="#adding_collapse">Erfassung</a>		
-            <div id="adding_collapse" class="collapse">
+            <a class="section1" data-toggle="collapse" data-target="#adding_collapse_mobile">Erfassung</a>		
+            <div id="adding_collapse_mobile" class="collapse">
                 <a href="" class="section2">- Einnahme</a>
                 <a href="" class="section2">- Ausgabe</a>
             </div> 
-            <a class="section1" data-toggle="collapse" data-target="#overview_collapse">Übersicht</a>
-            <div id="overview_collapse" class="collapse">
+            <a class="section1" data-toggle="collapse" data-target="#overview_collapse_mobile">Übersicht</a>
+            <div id="overview_collapse_mobile" class="collapse">
                 <a href="" class="section2">- Listen</a>
                 <a href="" class="section2">- Verlauf</a>
             </div> 
