--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -31,7 +31,8 @@
             <div id="overview_collapse" class="collapse">
                 <a href="" class="section2">Listen</a>
                 <a href="" class="section2">Verlauf</a>
-            </div> 
+            </div>
+            <a href="" class="section1" data-toggle="modal" data-target="#fixpaymentsModal">Fixe Zahlungen</a>
             <a href="" class="section1">Einstellungen</a>
 	</div>
 	<div id="header">
@@ -308,6 +309,132 @@
                 </div>
             </div>
         </div>
+        
+        <div id="fixpaymentsModal" class="modal fade" role="dialog">
+            <div class="modal-dialog">
+                <!-- Modal content-->
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">Erfassung</h4>
+                    </div>
+                    <div class="modal-body">
+                        <form>
+                            <fieldset> 
+                                <table width="100%">
+                                    <tr>
+                                        <td>
+                                            <input type="radio" onclick="income()" id="in" value="income" name="payments" checked="checked"/> 
+                                            <label for="in">Einnahme</label>
+                                        </td>
+                                        <td>
+                                            <input type="radio" onclick="outcome()" id="out" value="outcome" name="payments" /> 
+                                            <label for="out">Ausgabe</label>
+                                        </td>
+                                    </tr>
+                                </table>
+                            </fieldset>
+                            <div>
+                                <div id="income">
+                                    <fieldset> 
+                                        <table width="100%">
+                                            <tr>
+                                                <td>
+                                                    <p>Kategorie:</p>
+                                                </td>
+                                                <td>
+                                                    <h:selectOneMenu>
+                                                        <f:selectItems value="#{master.categoriesIncome}" var="c"
+                                                                       itemLabel="#{c.name}" itemValue="#{c.name}" />
+                                                    </h:selectOneMenu>
+                                                    <button type="button" data-toggle="modal" data-target="#addingKategorieEinnahme">Hinzufügen</button>
+                                                </td>                                     
+                                            </tr>
+                                            <tr>
+                                                <td>
+                                                    <p>Betrag:</p>
+                                                </td>
+                                                <td>
+                                                    <input type="number" id="Betrag" name="Betrag"></input> €
+                                                </td>                                        
+                                            </tr>
+                                            <tr>
+                                                <td>
+                                                    <p>Person:</p>
+                                                </td>
+                                                <td>
+                                                    <h:selectOneMenu>
+                                                        <f:selectItems value="#{master.person}" var="p"
+                                                                       itemLabel="#{p.name}" itemValue="#{p.name}" />
+                                                    </h:selectOneMenu>
+                                                    <button type="button" data-toggle="modal" data-target="#addingPerson">Hinzufügen</button>
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td>
+                                                    <p>Notiz:</p>
+                                                </td>
+                                                <td>
+                                                    <textarea id="Notiz" name="Notiz" cols="35" rows="4"></textarea>
+                                                </td>                                        
+                                            </tr>
+                                            <tr><td><button type="button">Hinzufügen</button></td></tr>
+                                        </table>
+                                    </fieldset>
+                                </div>
+                                <div id="outcome">
+                                    <fieldset> 
+                                        <table width="100%">
+                                            <tr>
+                                                <td>
+                                                    <p>Kategorie:</p>
+                                                </td>
+                                                <td>
+                                                    <h:selectOneMenu>
+                                                        <f:selectItems value="#{master.categoriesOutcome}" var="c"
+                                                                       itemLabel="#{c.name}" itemValue="#{c.name}" />
+                                                    </h:selectOneMenu>
+                                                    <button type="button" data-toggle="modal" data-target="#addingKategorieAusgabe">Hinzufügen</button>
+                                                </td>                                     
+                                            </tr>
+                                            <tr>
+                                                <td>
+                                                    <p>Betrag:</p>
+                                                </td>
+                                                <td>
+                                                    <input type="number" id="Betrag" name="Betrag"></input> €
+                                                </td>                                        
+                                            </tr>
+                                            <tr>
+                                                <td>
+                                                    <p>Person:</p>
+                                                </td>
+                                                <td>
+                                                    <h:selectOneMenu>
+                                                        <f:selectItems value="#{master.person}" var="p"
+                                                                       itemLabel="#{p.name}" itemValue="#{p.name}" />
+                                                    </h:selectOneMenu>
+                                                    <button type="button" data-toggle="modal" data-target="#addingPerson">Hinzufügen</button>
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td>
+                                                    <p>Notiz:</p>
+                                                </td>
+                                                <td>
+                                                    <textarea id="Notiz" name="Notiz" cols="35" rows="4"></textarea>
+                                                </td>                                        
+                                            </tr>
+                                            <tr><td><button type="button">Hinzufügen</button></td></tr>
+                                        </table>
+                                    </fieldset>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+	</div>
     </h:body>
 </html>
 
