--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -39,7 +39,7 @@
             </a>
         </div>
         <div id="nav">
-            <img src="img/logo.png" />
+            <img src="img/logo.svg" />
             <a href="index.xhtml" class="section1">Dashboard</a>
             <a class="section1" data-toggle="collapse" data-target="#adding_collapse">Erfassung</a>		
             <div id="adding_collapse" class="collapse">
